# Sight

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
scripts/: generate_logo_sources.py
src/: cli.rs  exif.rs  image_processor.rs  lib.rs  logo.rs  main.rs  resource.rs  util.rs
src/logos/: canon.base64  fujifilm.base64  nikon.base64  panasonic.base64  sony.base64
